# erdos

./: .gitignore  DATA_APPENDIX.md  HANDOFF_unit_distance.md  README.md  RESULTS.md  pyproject.toml  session_report.md
code/: exp1_grid.py  exp2_structure.py  exp3_bisector.py  exp4_anneal.py  exp5_circles.py  exp6_clean.py  exp7_audit.py  exp8_structure.py  exp9_lattice_id.py
data/: engel_targets.json  udg30_91edges.csv  udg30_91edges_audit.json  udg30_93edges.csv  udg30_93edges_audit.json  udg30_93edges_b.csv  udg30_93edges_b_audit.json  udg40_132edges.csv  udg40_132edges.npy  udg40_132edges_b.csv  udg40_132edges_b_audit.json  udg40_133edges_nonML.csv  udg40_133edges_nonML_audit.json  udg40_133edges_nonML_b.csv  udg40_133edges_nonML_b_audit.json  udg40_136edges.csv  udg40_136edges_audit.json  udg40_136edges_b.csv  udg40_136edges_b_audit.json  udg40_137edges.csv  udg40_137edges_audit.json  udg40_137edges_audit.txt  udg50_177edges.csv  udg50_177edges_audit.json  udg50_179edges.csv  udg50_179edges_audit.json  udg50_181edges.csv  udg50_181edges_audit.json  udg50_183edges_audit.json  udg64_252edges.csv  udg70_274edges.csv  udg70_274edges_audit.json  udg70_277edges.csv  udg70_277edges_audit.json  udg70_281edges_b.csv  udg70_281edges_b_audit.json  udg70_281edges_c.csv  udg70_281edges_c_audit.json  udg90_385edges.csv  udg90_385edges_b.csv  (+2 more)
docs/: LITERATURE-2026-06-10.md  dichotomy-probe-2026-06-10.md  hinge-REPORT-2026-06-10.md  sweep-2026-06-10.md
scripts/: audit_config.py  bnb_n30_wheel49.py  chase40_beam.py  chase40_dropk.py  chase40_minkowski.py  chase40_restart.py  (+25 more)
(+303 files in other folders)
