[project]
name = "udg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chirag Patnaik", email = "dev@nakli.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
